--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -48,10 +48,15 @@
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 10px;
+    margin-bottom: 5px;
 }
 .item-data{
     display: flex;
     justify-content: space-between;
     width: 100%;
     margin-left: 15px;
+}
+body{
+    overflow: hidden;
+    height: 100%;
 }
