changed height from percent to pixels

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -19,7 +19,7 @@
 }
 .profile-bg{
     background: linear-gradient(#002766, #0265c2);
-    height: 30%;
+    height: 200px;
     color: white;
 }
 .content-body{
